@@ -16,43 +16,11 @@ APACHE_MODULE(cache, dynamic file caching, $cache_objs, , most)
 APACHE_MODULE(disk_cache, disk caching module, , , most)
 
 AC_DEFUN([CHECK_DISTCACHE], [
-  AC_MSG_CHECKING(whether Distcache is required)
-  ap_ssltk_dc="no"
-  tmp_nomessage=""
-  tmp_forced="no"
-  AC_ARG_ENABLE(distcache,
-    APACHE_HELP_STRING(--enable-distcache,Enable distcache support),
-    ap_ssltk_dc="$enableval"
-    tmp_nomessage=""
-    tmp_forced="yes"
-    if test "x$ap_ssltk_dc" = "x"; then
-      ap_ssltk_dc="yes"
-      dnl our "error"s become "tests revealed that..."
-      tmp_forced="no"
-    fi
-    if test "$ap_ssltk_dc" != "yes" -a "$ap_ssltk_dc" != "no"; then
-      tmp_nomessage="--enable-distcache had illegal syntax - disabling"
-      ap_ssltk_dc="no"
-    fi)
-  if test "$tmp_forced" = "no"; then
-    AC_MSG_RESULT($ap_ssltk_dc (default))
-  else
-    AC_MSG_RESULT($ap_ssltk_dc (specified))
-  fi
-  if test "$tmp_forced" = "yes" -a "x$ap_ssltk_dc" = "xno" -a "x$tmp_nomessage" != "x"; then
-    AC_MSG_ERROR(distcache support failed: $tmp_nomessage)
-  fi
-  if test "$ap_ssltk_dc" = "yes"; then
-    AC_CHECK_HEADER(
-      [distcache/dc_client.h],
-      [],
-      [tmp_nomessage="can't include distcache headers"
-      ap_ssltk_dc="no"])
-    if test "$tmp_forced" = "yes" -a "x$ap_ssltk_dc" = "xno"; then
-      AC_MSG_ERROR(distcache support failed: $tmp_nomessage)
-    fi
-  fi
-  if test "$ap_ssltk_dc" = "yes"; then
+  AC_CHECK_HEADER(
+    [distcache/dc_client.h],
+    [have_distcache=yes],
+    [have_distcache=no])
+  if test "$have_distcache" = "yes"; then
     AC_MSG_CHECKING(for Distcache version)
     AC_TRY_COMPILE(
 [#include <distcache/dc_client.h>],
@@ -60,14 +28,10 @@ AC_DEFUN([CHECK_DISTCACHE], [
 #error "distcache API version is unrecognised"
 #endif],
 [],
-[tmp_nomessage="distcache has an unsupported API version"
-ap_ssltk_dc="no"])
-    AC_MSG_RESULT($ap_ssltk_dc)
-    if test "$tmp_forced" = "yes" -a "x$ap_ssltk_dc" = "xno"; then
-      AC_MSG_ERROR(distcache support failed: $tmp_nomessage)
-    fi
+[have_distcache=no])
+    AC_MSG_RESULT($have_distcache)
   fi
-  if test "$ap_ssltk_dc" = "yes"; then
+  if test "$have_distcache" = "yes"; then
     AC_MSG_CHECKING(for Distcache libraries)
     save_libs=$LIBS
     LIBS="$LIBS -ldistcache -lnal"
@@ -75,16 +39,15 @@ ap_ssltk_dc="no"])
       [#include <distcache/dc_client.h>],
       [DC_CTX *foo = DC_CTX_new((const char *)0,0);],
       [],
-      [tmp_no_message="failed to link with distcache libraries"
-      ap_ssltk_dc="no"])
+      [have_distcache=no])
     LIBS=$save_libs
-    AC_MSG_RESULT($ap_ssltk_dc)
-    if test "$tmp_forced" = "yes" -a "x$ap_ssltk_dc" = "xno"; then
-      AC_MSG_ERROR(distcache support failed: $tmp_nomessage)
-    else
-      APR_ADDTO(MOD_SOCACHE_LDADD, [-ldistcache -lnal])
-      AC_DEFINE(HAVE_DISTCACHE, 1, [Define if distcache support is enabled])
-    fi
+    AC_MSG_RESULT($have_distcache)
+  fi
+  if test "$have_distcache" = "yes"; then
+    APR_ADDTO(MOD_SOCACHE_LDADD, [-ldistcache -lnal])
+    AC_DEFINE(HAVE_DISTCACHE, 1, [Define if distcache support is enabled])
+  else
+    enable_socache_dc=no
   fi
 ])
 
