@@ -46,6 +46,8 @@ Changes with Apache 2.3.6
      Cache-Control header, and arbitrarily denied if both headers were missing.
      [Graham Leggett]
 
+  *) configure: Add reallyall option for --enable-mods-shared. [Stefan Fritsch]
+
   *) core: Add microsecond timestamp fractions, process id and thread id
      to the error log. [Rainer Jung]
 
